@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-21T08:15:44Z",
-  "count_outdated" : 251,
-  "uniques_outdated" : 119,
+  "timestamp" : "2022-04-23T16:15:25Z",
+  "count_outdated" : 252,
+  "uniques_outdated" : 120,
   "count" : 263,
   "uniques" : 129,
   "clones" : [
-    {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-18T00:00:00Z",
       "count": 8,
