@@ -1,12 +1,7 @@
 {
-  "count": 12,
-  "uniques": 8,
+  "count": 11,
+  "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-18T00:00:00Z",
       "count": 8,
