@@ -1,3 +1,9 @@
+2022-04-23T16:15:25Z:
+* notice: last 14d: all unq: 11 7
+* notice: prev accum: outdated-all outdated-unq / all unq: 251 119 / 263 129
+* notice: next accum: outdated-all outdated-unq / all unq: 252 120 / 263 129
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-21T08:15:44Z:
 * notice: last 14d: all unq: 12 8
 * notice: prev accum: outdated-all outdated-unq / all unq: 251 119 / 262 128
